@@ -1,68 +1,79 @@
 package ru.practicum.ewm.exception;
 
+import jakarta.validation.ConstraintViolationException;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.http.HttpStatus;
+import org.springframework.http.converter.HttpMessageNotReadableException;
+import org.springframework.validation.BindException;
 import org.springframework.web.bind.MethodArgumentNotValidException;
+import org.springframework.web.bind.MissingServletRequestParameterException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
+import org.springframework.web.method.annotation.MethodArgumentTypeMismatchException;
 import ru.practicum.ewm.dto.apiError.ApiError;
 
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
+@Slf4j
 @RestControllerAdvice
 public class ErrorHandler {
-    @ExceptionHandler
+    private static final DateTimeFormatter FORMATTER = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
+
+    @ExceptionHandler(NotFoundException.class)
     @ResponseStatus(HttpStatus.NOT_FOUND)
     public ApiError handleNotFoundException(final NotFoundException e) {
         return new ApiError(
-                List.of(),
+                Collections.emptyList(),
                 e.getMessage(),
                 "The required object was not found.",
                 "NOT_FOUND",
-                LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss"))
+                LocalDateTime.now().format(FORMATTER)
         );
     }
 
-    @ExceptionHandler
+    @ExceptionHandler(ConflictException.class)
     @ResponseStatus(HttpStatus.CONFLICT)
     public ApiError handleConflictException(final ConflictException e) {
         return new ApiError(
-                List.of(),
+                Collections.emptyList(),
                 e.getMessage(),
                 "Integrity constraint has been violated.",
                 "CONFLICT",
-                LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss"))
+                LocalDateTime.now().format(FORMATTER)
         );
     }
 
-    @ExceptionHandler
+    @ExceptionHandler(ForbiddenException.class)
     @ResponseStatus(HttpStatus.FORBIDDEN)
     public ApiError handleForbiddenException(final ForbiddenException e) {
         return new ApiError(
-                List.of(),
+                Collections.emptyList(),
                 e.getMessage(),
                 "For the requested operation the conditions are not met.",
                 "FORBIDDEN",
-                LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss"))
+                LocalDateTime.now().format(FORMATTER)
         );
     }
 
-    @ExceptionHandler
+    @ExceptionHandler(BadRequestException.class)
     @ResponseStatus(HttpStatus.BAD_REQUEST)
     public ApiError handleBadRequestException(final BadRequestException e) {
         return new ApiError(
-                List.of(),
+                Collections.emptyList(),
                 e.getMessage(),
                 "Incorrectly made request.",
                 "BAD_REQUEST",
-                LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss"))
+                LocalDateTime.now().format(FORMATTER)
         );
     }
 
-    @ExceptionHandler
+    @ExceptionHandler(MethodArgumentNotValidException.class)
     @ResponseStatus(HttpStatus.BAD_REQUEST)
     public ApiError handleMethodArgumentNotValidException(final MethodArgumentNotValidException e) {
         List<String> errors = e.getBindingResult().getFieldErrors().stream()
@@ -71,13 +82,125 @@ public class ErrorHandler {
                         error.getDefaultMessage(),
                         error.getRejectedValue()))
                 .collect(Collectors.toList());
-
         return new ApiError(
                 errors,
                 "Validation failed",
                 "Incorrectly made request.",
                 "BAD_REQUEST",
-                LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss"))
+                LocalDateTime.now().format(FORMATTER)
+        );
+    }
+
+    @ExceptionHandler(BindException.class)
+    @ResponseStatus(HttpStatus.BAD_REQUEST)
+    public ApiError handleBindException(final BindException e) {
+        List<String> errors = e.getBindingResult().getFieldErrors().stream()
+                .map(error -> String.format("Field: %s. Error: %s. Value: %s",
+                        error.getField(),
+                        error.getDefaultMessage(),
+                        error.getRejectedValue()))
+                .collect(Collectors.toList());
+        return new ApiError(
+                errors,
+                "Validation failed",
+                "Incorrectly made request.",
+                "BAD_REQUEST",
+                LocalDateTime.now().format(FORMATTER)
+        );
+    }
+
+    @ExceptionHandler(ConstraintViolationException.class)
+    @ResponseStatus(HttpStatus.BAD_REQUEST)
+    public ApiError handleConstraintViolationException(final ConstraintViolationException e) {
+        List<String> errors = e.getConstraintViolations().stream()
+                .map(violation -> String.format("Field: %s. Error: %s. Value: %s",
+                        violation.getPropertyPath(),
+                        violation.getMessage(),
+                        violation.getInvalidValue()))
+                .collect(Collectors.toList());
+        return new ApiError(
+                errors,
+                "Validation failed",
+                "Incorrectly made request.",
+                "BAD_REQUEST",
+                LocalDateTime.now().format(FORMATTER)
+        );
+    }
+
+    @ExceptionHandler(MissingServletRequestParameterException.class)
+    @ResponseStatus(HttpStatus.BAD_REQUEST)
+    public ApiError handleMissingServletRequestParameterException(final MissingServletRequestParameterException e) {
+        return new ApiError(
+                Collections.singletonList(e.getMessage()),
+                "Required parameter is missing",
+                "Incorrectly made request.",
+                "BAD_REQUEST",
+                LocalDateTime.now().format(FORMATTER)
+        );
+    }
+
+    @ExceptionHandler(MethodArgumentTypeMismatchException.class)
+    @ResponseStatus(HttpStatus.BAD_REQUEST)
+    public ApiError handleMethodArgumentTypeMismatchException(final MethodArgumentTypeMismatchException e) {
+        String error = String.format("Failed to convert value of type %s to required type %s; value: %s",
+                e.getValue() != null ? e.getValue().getClass().getSimpleName() : "null",
+                e.getRequiredType() != null ? e.getRequiredType().getSimpleName() : "null",
+                e.getValue());
+        return new ApiError(
+                Collections.singletonList(error),
+                "Type mismatch",
+                "Incorrectly made request.",
+                "BAD_REQUEST",
+                LocalDateTime.now().format(FORMATTER)
+        );
+    }
+
+    @ExceptionHandler(HttpMessageNotReadableException.class)
+    @ResponseStatus(HttpStatus.BAD_REQUEST)
+    public ApiError handleHttpMessageNotReadableException(final HttpMessageNotReadableException e) {
+        return new ApiError(
+                Collections.singletonList(e.getMessage()),
+                "Invalid request body format",
+                "Incorrectly made request.",
+                "BAD_REQUEST",
+                LocalDateTime.now().format(FORMATTER)
+        );
+    }
+
+    @ExceptionHandler(DataIntegrityViolationException.class)
+    @ResponseStatus(HttpStatus.CONFLICT)
+    public ApiError handleDataIntegrityViolationException(final DataIntegrityViolationException e) {
+        return new ApiError(
+                Collections.singletonList(e.getMessage()),
+                "Integrity constraint has been violated.",
+                "Integrity constraint has been violated.",
+                "CONFLICT",
+                LocalDateTime.now().format(FORMATTER)
+        );
+    }
+
+    @ExceptionHandler(IllegalArgumentException.class)
+    @ResponseStatus(HttpStatus.BAD_REQUEST)
+    public ApiError handleIllegalArgumentException(final IllegalArgumentException e) {
+        return new ApiError(
+                Collections.singletonList(e.getMessage()),
+                e.getMessage(),
+                "Incorrectly made request.",
+                "BAD_REQUEST",
+                LocalDateTime.now().format(FORMATTER)
+        );
+    }
+
+    @ExceptionHandler(Exception.class)
+    @ResponseStatus(HttpStatus.INTERNAL_SERVER_ERROR)
+    public ApiError handleGenericException(final Exception e) {
+        log.error("Unexpected error: ", e);
+        return new ApiError(
+                Collections.singletonList(e.getMessage()),
+                "Internal server error.",
+                "Internal server error.",
+                "INTERNAL_SERVER_ERROR",
+                LocalDateTime.now().format(FORMATTER)
         );
     }
 }
